# docs/swagger.json
@@ -8,9 +8,8 @@
     },
     "basePath": "/api",
     "paths": {
-        "/hello": {
+        "/kost": {
             "get": {
-                "description": "API ini mengembalikan pesan Hello World",
                 "consumes": [
                     "application/json"
                 ],
@@ -20,23 +19,72 @@
                 "tags": [
                     "kost-controller"
                 ],
-                "summary": "Menampilkan pesan Hello World",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/common.APIResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/response.ViewKostResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "kost-controller"
+                ],
+                "parameters": [
+                    {
+                        "description": "Data Kost",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.AddKostRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/common.APIResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/response.KostResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
             }
         },
-        "/kamarHello": {
-            "get": {
-                "description": "API ini mengembalikan pesan Hello World",
+        "/kost/{id}": {
+            "put": {
                 "consumes": [
                     "application/json"
                 ],
@@ -46,15 +94,69 @@
                 "tags": [
                     "kost-controller"
                 ],
-                "summary": "Menampilkan pesan Hello World",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID Kost",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Data Kost",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.UpdateKostRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/common.APIResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/response.KostResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "kost-controller"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID Kost",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.APIResponse"
                         }
                     }
                 }
@@ -118,6 +220,23 @@
                 }
             }
         },
+        "request.AddKostRequest": {
+            "type": "object",
+            "properties": {
+                "alamat": {
+                    "type": "string"
+                },
+                "namaKost": {
+                    "type": "string"
+                },
+                "pemilik": {
+                    "type": "integer"
+                },
+                "typeKost": {
+                    "type": "string"
+                }
+            }
+        },
         "request.RegisterRequest": {
             "type": "object",
             "properties": {
@@ -132,6 +251,40 @@
                 }
             }
         },
+        "request.UpdateKostRequest": {
+            "type": "object",
+            "properties": {
+                "alamat": {
+                    "type": "string"
+                },
+                "namaKost": {
+                    "type": "string"
+                },
+                "pemilik": {
+                    "type": "integer"
+                },
+                "typeKost": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.KostResponse": {
+            "type": "object",
+            "properties": {
+                "alamat": {
+                    "type": "string"
+                },
+                "namaKost": {
+                    "type": "string"
+                },
+                "pemilik": {
+                    "type": "string"
+                },
+                "typeKost": {
+                    "type": "string"
+                }
+            }
+        },
         "response.SignUpResponse": {
             "type": "object",
             "properties": {
@@ -139,6 +292,23 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.ViewKostResponse": {
+            "type": "object",
+            "properties": {
+                "alamat": {
+                    "type": "string"
+                },
+                "namaKost": {
+                    "type": "string"
+                },
+                "pemilik": {
+                    "type": "string"
+                },
+                "typeKost": {
                     "type": "string"
                 }
             }
