# modules/kost/request/updatekostrequest.go
@@ -1,0 +1,8 @@
+package request
+
+type UpdateKostRequest struct {
+	NamaKost string `json:"namaKost"`
+	Alamat   string `json:"alamat"`
+	Pemilik  int    `json:"pemilik"`
+	TypeKost string `json:"typeKost"`
+}
