# routers/router.go
@@ -1,8 +1,8 @@
 package routers
 
 import (
-	"aplikasi-adakost-be/common"
-	"aplikasi-adakost-be/modules/user/controller"
+	kostcontroller "aplikasi-adakost-be/modules/kost/controller"
+	usercontroller "aplikasi-adakost-be/modules/user/controller"
 
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
@@ -14,27 +14,19 @@ func SetupRouters() *gin.Engine {
 
 	api := r.Group("/api")
 	{
-		api.GET("/hello", HelloWorld)
-
 		// LOGIN DAN REGISTER
-		api.POST("/signup", controller.SaveRegister)
+		api.POST("/signup", usercontroller.SaveRegister)
+
+		// KOST
+		api.POST("/kost", kostcontroller.AddKost)
+		api.PUT("/kost/:id", kostcontroller.UpdateKost)
+		api.GET("/kost", kostcontroller.GetAllKost)
+		api.DELETE("/kost/:id", kostcontroller.DeleteKost)
 	}
-	url := ginSwagger.URL("http://localhost:8080/v3/api-docs") // endpoint JSON swagger kamu
+	url := ginSwagger.URL("http://localhost:8080/v3/api-docs")
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
 	r.GET("/v3/api-docs", func(c *gin.Context) {
 		c.File("./docs/swagger.json")
 	})
 	return r
-}
-
-// HelloWorld godoc
-// @Summary Menampilkan pesan Hello World
-// @Description API ini mengembalikan pesan Hello World
-// @Tags kost-controller
-// @Accept json
-// @Produce json
-// @Success 200 {object} map[string]string
-// @Router /hello [get]
-func HelloWorld(ctx *gin.Context) {
-	common.GenerateSuccessResponseWithData(ctx, "hello world", nil)
 }
